Dodany jako taki model
Nie wiem jeszcze do konca jak baza bedzie wygladala ale to taki wstepniaczek plus dodalem okienko w rejestracji na maila jeszcze

--- a/Filmweb/Filmweb.csproj
+++ b/Filmweb/Filmweb.csproj
@@ -55,6 +55,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\MovieListItemM.cs" />
+    <Compile Include="Model\MovieM.cs" />
+    <Compile Include="Model\ReviewM.cs" />
+    <Compile Include="Model\UserM.cs" />
     <Compile Include="ViewModel\BaseClass\RelayCommand.cs" />
     <Compile Include="ViewModel\BaseClass\ViewModelBase.cs" />
     <Compile Include="ViewModel\LoginVM.cs" />
@@ -113,8 +117,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
