lista opinni w profilu

--- a/Filmweb/Filmweb.csproj
+++ b/Filmweb/Filmweb.csproj
@@ -96,6 +96,7 @@
     <Compile Include="BoolToVisibilityConverter.cs" />
     <Compile Include="DatabaseConnection.cs" />
     <Compile Include="InverseBoolToVisibilityConverter.cs" />
+    <Compile Include="ListToCommaStringConverter.cs" />
     <Compile Include="Model\MovieListItemM.cs" />
     <Compile Include="Model\MovieM.cs" />
     <Compile Include="Model\ReviewM.cs" />
